--- a/app/src/main/res/layout/content_search_main.xml
+++ b/app/src/main/res/layout/content_search_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.rufflez.Cookbook.MainActivity"
+    tools:context="com.example.rufflez.Cookbook.activity.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
