--- a/app/src/main/res/layout/content_detail_food.xml
+++ b/app/src/main/res/layout/content_detail_food.xml
@@ -211,7 +211,8 @@
         <android.support.v7.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp">
+            android:layout_margin="8dp"
+            app:cardBackgroundColor="@color/white">
                 <include layout="@layout/fragment_nguyen_lieu"/>
             <!--<include layout="@layout/fragment_nguyen_lieu"/>-->
         </android.support.v7.widget.CardView>
@@ -220,6 +221,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
+            app:cardBackgroundColor="@color/white"
             android:focusableInTouchMode="false">
 
             <include layout="@layout/fragment_step" />
