--- a/app/src/main/res/layout/content_search_main.xml
+++ b/app/src/main/res/layout/content_search_main.xml
@@ -12,26 +12,13 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:background="@color/white"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context=".MainActivity"
-        tools:showIn="@layout/activity_main"
-        >
-        <include layout="@layout/content_main"/>
+        tools:showIn="@layout/activity_main">
+
+        <include layout="@layout/content_main" />
     </android.support.v4.widget.NestedScrollView>
-    <com.roughike.bottombar.BottomBar
-        android:id="@+id/bottomBar"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_alignParentBottom="true"
-        android:textAlignment="center"
-        android:layout_gravity="bottom"
-        android:background="@color/primary"
-        app:bb_tabXmlResource="@xml/bottombar_tabs"
-        app:bb_behavior="shifting|shy|iconsOnly" />
-
-
-
 
 </android.support.design.widget.CoordinatorLayout>
