--- a/app/src/main/res/layout/fragment_nguyen_lieu.xml
+++ b/app/src/main/res/layout/fragment_nguyen_lieu.xml
@@ -5,25 +5,55 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:nestedScrollingEnabled="true"
+    android:padding="16dp"
+    android:layout_marginTop="5dp"
     android:descendantFocusability="blocksDescendants"
     android:background="#f7f9f4"
     >
-    <TextView
-        android:id="@+id/tv"
-        android:layout_width="230dp"
-        android:layout_height="wrap_content"
-        android:text="Chọn nguyên liệu để chuẩn bị đi chợ nào !"
-        android:textStyle="italic"
-        android:fontFamily="sans-serif-condensed"
-        />
-    <ListView
-        android:id="@+id/lv"
+    <LinearLayout
+        android:gravity="center|left"
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:id="@+id/rlayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:choiceMode="multipleChoice"
-        android:layout_below="@id/tv"
-        >
-    </ListView>
-
-
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/cart_24dp_color"/>
+        <TextView
+            android:layout_marginLeft="10dp"
+            android:textStyle="bold"
+            android:textColor="@color/primaryDark"
+            android:textSize="20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bạn cần"/>
+    </LinearLayout>
+    <!--<ListView-->
+        <!--android:id="@+id/lv"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:choiceMode="multipleChoice"-->
+        <!--android:layout_below="@id/tv"-->
+        <!--&gt;-->
+    <!--</ListView>-->
+    <android.support.v7.widget.RecyclerView
+        android:paddingTop="8dp"
+        android:id="@+id/rv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rlayout"></android.support.v7.widget.RecyclerView>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_marginTop="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/rv"
+        android:id="@+id/btn_shop"
+        android:text="Thêm vào danh sách đi chợ"
+        android:textColor="@color/bb_inActiveBottomBarItemColor"
+        android:background="@color/md_blue_100"/>
 </RelativeLayout>
