--- a/app/src/main/res/layout/item_in_type_food.xml
+++ b/app/src/main/res/layout/item_in_type_food.xml
@@ -91,6 +91,7 @@
                             android:layout_marginLeft="5dp"
                             android:gravity="center_horizontal"
                             android:layout_weight="3"
+                            android:paddingBottom="3dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                     </LinearLayout>
