--- a/app/src/main/res/layout/more_item_in_type_food_grid_item.xml
+++ b/app/src/main/res/layout/more_item_in_type_food_grid_item.xml
@@ -12,8 +12,8 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv_more_food"
-        android:layout_width="110dp"
-        android:layout_height="170dp"
+        android:layout_width="165dp"
+        android:layout_height="220dp"
         android:elevation="10dp"
         app:cardCornerRadius="5dp"
         android:layout_margin="2dp">
@@ -25,8 +25,8 @@
             <ImageView
                 android:id="@+id/img_more_food"
                 android:padding="5dp"
-                android:layout_width="100dp"
-                android:layout_height="115dp"
+                android:layout_width="155dp"
+                android:layout_height="155dp"
                 android:layout_gravity="center"
                 android:scaleType="centerCrop"
                 android:layout_weight="2"
@@ -57,7 +57,7 @@
                     android:layout_weight="0"/>
                 <TextView
                     android:id="@+id/item_time"
-                    android:textColor="#018417"
+                    android:textColor="@color/bb_inActiveBottomBarItemColor"
                     android:textAlignment="center"
                     android:layout_gravity="center_horizontal|center"
                     android:layout_marginStart="5dp"
