--- a/app/src/main/res/layout/shopping_fragment.xml
+++ b/app/src/main/res/layout/shopping_fragment.xml
@@ -35,52 +35,10 @@
         android:textAllCaps="false"
         />
 </RelativeLayout>
-<android.support.v7.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_below="@+id/linerText"
-    android:layout_margin="5dp">
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Gà rán mật ong"
-            android:layout_margin="10dp"
-            android:fontFamily="sans-serif"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recycle_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="5dp">
-
-                </android.support.v7.widget.RecyclerView>
-
-                <Button
-                    android:id="@+id/button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:text="Nấu thôi!"
-                    android:textAllCaps="false" />
-            </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/linerText"></android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
 
