--- a/app/src/main/res/layout/activity_splash_sreen.xml
+++ b/app/src/main/res/layout/activity_splash_sreen.xml
@@ -4,22 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/white"
     tools:context="com.example.rufflez.Cookbook.activity.SplashScreen">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="Welcome To"
-        android:textSize="40sp"
-        android:textColor="@color/md_cyan_100"
-        android:fontFamily="casual"
-        android:layout_marginTop="70dp"
-        />
+
     <ImageView
         android:layout_centerInParent="true"
-        android:layout_width="200dp"
-        android:layout_height="match_parent"
-        android:src="@drawable/chef"/>
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon"/>
 
 </RelativeLayout>
