--- a/app/src/main/res/layout/activity_more_food.xml
+++ b/app/src/main/res/layout/activity_more_food.xml
@@ -5,27 +5,44 @@
     android:id="@+id/more_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBar_more"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
+        app:elevation="10dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
-            android:layout_width="352dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
+            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|snap"
+            app:expandedTitleGravity="center|left"
+            >
+            <ImageView
+                android:id="@+id/header"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                android:background="@drawable/background_navigation"
+                app:layout_collapseMode="pin" />
+            <ImageView
+                android:background="@drawable/gradient"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                />
             <android.support.v7.widget.Toolbar
                 android:id="@+id/tool_bar_more_food"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:expandedTitleGravity="center"
+                app:popupTheme="@style/MyMaterialTheme.PopupOverlay"
+                app:layout_scrollFlags="scroll|enterAlways|snap"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                >
+            </android.support.v7.widget.Toolbar>
+
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
