--- a/app/src/main/res/layout/activity_splash_sreen.xml
+++ b/app/src/main/res/layout/activity_splash_sreen.xml
@@ -4,13 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context="com.example.rufflez.Cookbook.activity.SplashScreen">
-
+    android:background="@color/colorPrimary"
+    tools:context="com.example.rufflez.Cookbook.SplashScreen">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="Welcome To"
+        android:textSize="40sp"
+        android:textColor="@color/md_cyan_100"
+        android:fontFamily="casual"
+        android:layout_marginTop="70dp"
+        />
     <ImageView
         android:layout_centerInParent="true"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/icon"/>
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:src="@drawable/chef"/>
 
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
+        android:id="@+id/progressBar" />
+
+    <TextView
+        android:textSize="20sp"
+        android:text="TextView"
+        android:fontFamily="casual"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/progressBar"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/textView" />
 </RelativeLayout>
