--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,7 +20,7 @@
             android:title="Đi chợ mua gì?" />
     </group>
 
-    <item android:title="Trang chủ">
+    <item android:title="Danh Mục">
         <menu>
             <item
                 android:id="@+id/nav_mon_sang"
